[package]
name = "figtree"
version = "0.2.2"
authors = ["Jonathan <jonathan.frere@gmail.com>"]
license = "MIT"
description = "Figtree is a file format for human-useable configuration"

homepage = "http://www.johz.me/figtree"
documentation = "http://www.johz.me/figtree"
repository = "https://github.com/MrJohz/figtree"

readme = "README.md"

keywords = ["config", "configuration", "figtree"]

[dependencies]
matches = "0.1.*"
